syntax = "proto3";

option csharp_namespace = "ECommerce.Ordering.Api.Protos";

package OrderingApi;

service OrderingService {
	rpc CreateOrder(CreateOrderRequest) returns(CreateOrderResponse);
}

message CreateOrderRequest {
	string id = 1;
	string fullname = 2;
    string document = 3;
    string phone = 4;
    string email = 5;
    string firstline = 6;
    string secondline = 7;
    string city = 8;
    string state = 9;
    string zipcode = 10;
    double value = 11;
    string status = 12;
	repeated OrderItem items = 13;
}

message CreateOrderResponse {
    bool isvalid = 1;
    string message = 2;
}

message Order {
	string id = 1;
	string fullname = 2;
    string document = 3;
    string phone = 4;
    string email = 5;
    string firstline = 6;
    string secondline = 7;
    string city = 8;
    string state = 9;
    string zipcode = 10;
    double value = 11;
    string status = 12;
	repeated OrderItem items = 13;
}

message OrderItem {
	string id = 1;
	string name = 2;
	int32 quantity = 3;
	double value = 4;
	string image = 5;
	string productid = 6;
	string orderid = 7;
}